added Google map

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <script src="https://kit.fontawesome.com/e59d6d4319.js" crossorigin="anonymous"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuSBLKEZUsJz1x6rKHjyvs3oSQzhjs5n0"></script>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
