--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://kit.fontawesome.com/e59d6d4319.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://js.arcgis.com/4.27/esri/themes/light/main.css">
+    
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -13,6 +15,7 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <script src="https://kit.fontawesome.com/e59d6d4319.js" crossorigin="anonymous"></script>
+    <script src="https://js.arcgis.com/4.27/"></script>
     
 
     <div id="app"></div>
@@ -25,7 +28,7 @@
         // Add other bootstrap parameters as needed, using camel case.
       });
     </script>
-    <!-- <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap"></script> -->
+    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap"></script> -->
 
 
   </body>
