added google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F1EVX9DKLQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-F1EVX9DKLQ');
+    </script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://kit.fontawesome.com/e59d6d4319.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://js.arcgis.com/4.27/esri/themes/light/main.css">
     
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Locate & Share App</title>
   </head>
   <body>
     <noscript>
